@@ -1,3 +1,9 @@
+globus-common (17.1-1+gt6.@distro@) @distro@; urgency=low
+
+  * Add missing file
+
+ -- Globus Toolkit <support@globus.org>  Fri, 03 Mar 2017 12:41:06 -0500
+
 globus-common (17.0-1+gt6.@distro@) @distro@; urgency=low
 
   * add additional error handling api
